# SEAR

./: .gitignore  BENCHMARK_RESULTS.md  BOOLEAN_QUERIES.md  CHANGELOG.md  EXTRACTION_GUIDE.md  GPU_SUPPORT.md  INSTALL.md  README.md  claude-code.txt  extracted_content.txt  pyproject.toml  requirements-converter.txt  requirements.txt  sear.py  sear_core.py  test_boolean_cli.py  test_boolean_operations.py  test_document_order.py  test_extract.py  test_extract_large.py  test_json_query.py  test_min_score.py  test_sql_interface.py  test_thresholds.py  test_timing.py
claude-skill/: README.md  SKILL.md
claude-skill/examples/: basic-workflow.md  multi-corpus-search.md  pdf-conversion.md
doc_converter/cli/: __init__.py  main.py
doc_converter/converters/: base.py
doc_converter/core/: __init__.py  metadata.py  text_processor.py
examples/: README.md  batch_indexing.py  custom_pipeline.py  library_usage.py  sql_queries_example.py
scripts/: boolean_cli_test_standalone.py
src/: __init__.py
src/doc_converter/: __init__.py
src/doc_converter/cli/: __init__.py  main.py
src/doc_converter/converters/: __init__.py  base.py  docx.py  pdf.py
src/doc_converter/core/: __init__.py  metadata.py  output.py  text_processor.py
src/sear/: __init__.py  cli.py  core.py
tests/: __init__.py  test_boolean_operations.py  test_document_order.py  test_extract.py  test_extract_large.py  test_json_query.py  test_min_score.py  test_sql_interface.py  test_thresholds.py  test_timing.py
